[metadata]
name = comb_utils
version = 0.5.13
description = A basic package setup with examples.
long_description = file: README.md
long_description_content_type = text/markdown
author = Kaleb Coberly
maintainer_email = kaleb.coberly@gmail.com
copyright = 2024, Kaleb Coberly

[options.entry_points]
console_scripts = 
    example = comb_utils.cli.example:main

[options]
python_requires = >=3.11
package_dir=
    =src
packages=find:
install_requires =
    click
    typeguard

[options.packages.find]
where=src

[options.extras_require]
dev =
    comb_utils[build]
    comb_utils[doc]
    comb_utils[qc]
    comb_utils[test]
    
build =
    build
    twine

doc =
    furo
    sphinx
    sphinx-autodoc-typehints
    sphinx-click

qc =
    bandit
    black
    black[jupyter]
    flake8
    flake8-annotations
    flake8-bandit
    flake8-black
    flake8-bugbear
    flake8-docstrings
    flake8-isort
    isort
    jake
    pytype
    comb_utils[test]
    safety

test =
    coverage[toml]
    pytest
    pytest-cov